k8s/hello-app-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-depl
spec:
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-app
        image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
---

apiVersion: v1
kind: Service
metadata:
  name: hello-app-service
spec:
  type: NodePort
  selector:
    app: hello-app
  ports:
  - name: hello-app-port
    protocol: TCP
    port: 8080
    targetPort: 8080

---

# apiVersion: v1
# kind: Service
# metadata:
#   name: hello-app-clusterip-service
# spec:
#   selector:
#     app: hello-app
#   ports:
#   - name: hello-app
#     protocol: TCP
#     port: 3000
#     targetPort: 3000
